# SpotifyTopArtists

./: .gitignore  README.md  SpotifyStreamingHistory.py  gui.py  main.py  pyproject.toml  slideshow.py  testing.py
