[project]
name = "spotifytopartists"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "async-timeout==5.0.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dotenv==0.9.9",
    "fonttools==4.60.1",
    "idna==3.11",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "natsort==8.4.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pillow==12.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "redis==7.0.1",
    "requests==2.32.5",
    "ruff==0.14.3",
    "six==1.17.0",
    "spotipy==2.25.1",
    "urllib3==2.5.0",
]
